--- a/frontend-konark/src/App.css
+++ b/frontend-konark/src/App.css
@@ -85,6 +85,58 @@
   background: #4be6e6;
 }
 
+/* spinner */
+.spin-wrapper {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background: #ebebeb;
+}
+.spin-wrapper .spinner {
+  position: absolute;
+  height: 60px;
+  width: 60px;
+  border: 3px solid transparent;
+  border-top-color: #a04668;
+  top: 50%;
+  left: 50%;
+  margin: -30px;
+  border-radius: 50%;
+  animation: spin 2s linear infinite;
+}
+.spin-wrapper .spinner:before,
+.spin-wrapper .spinner:after {
+  content: "";
+  position: absolute;
+  border: 3px solid transparent;
+  border-radius: 50%;
+}
+.spin-wrapper .spinner:before {
+  border-top-color: #254e70;
+  top: -12px;
+  left: -12px;
+  right: -12px;
+  bottom: -12px;
+  animation: spin 3s linear infinite;
+}
+.spin-wrapper .spinner:after {
+  border-top-color: #fffbfe;
+  top: 6px;
+  left: 6px;
+  right: 6px;
+  bottom: 6px;
+  animation: spin 4s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 .template-item a {
   box-shadow: 0 15px 45px -9px rgba(0, 0, 0, 0.25);
   display: block;
@@ -1430,6 +1482,17 @@ input[type="tel"]:focus {
   bottom: 0;
 }
 
+.prod-quantity {
+  margin-right: 10px;
+  margin-left: 10px;
+  font-size: 18px;
+  color: black;
+  font-weight: bold;
+  border: 1px solid black;
+  padding: 8px 18px;
+  border-radius: 9px;
+  background-color: #f2f2f2;
+}
 .product-item .product-thumb .preview-meta {
   position: absolute;
   text-align: center;
