Added API Collection

--- a/views/invoice.handlebars
+++ b/views/invoice.handlebars
@@ -103,7 +103,7 @@
 
 <div class="container">
     <div class="header">
-        <img src="/logo.png" width="140px" height="40px" alt="Logo" />
+        <img src="https://res.cloudinary.com/pratikaswani/image/upload/v1646981807/logo_lltl9p.png" width="140px" height="40px" alt="Logo" />
     </div>
     <div style="height: 20px"></div>
     <div class="invoice-ref">
